// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components - features - OTT - header When site has hydrateOnly Header should be wrapped in static content tag 1`] = `
<div>
  <mock-static-content>
    <div
      class="header-wrapper"
    >
      <header
        class="header"
      >
        <div
          class="wrapper"
        >
          <a
            alt="lnmas.com.ar"
            class="header__logo"
            href="/homepage/"
            title="lnmas.com.ar"
          >
            LN+
          </a>
          <button
            class="header__hamburguer"
          >
            ☰
          </button>
          <nav
            class="header__nav"
          />
        </div>
      </header>
    </div>
  </mock-static-content>
</div>
`;

exports[`components - features - OTT - header When site has not hydrateOnly Header should be wrapped in static tag 1`] = `
<div>
  <mock-static
    id="123456567"
  >
    <div
      class="header-wrapper"
    >
      <header
        class="header"
      >
        <div
          class="wrapper"
        >
          <a
            alt="lnmas.com.ar"
            class="header__logo"
            href="/homepage/"
            title="lnmas.com.ar"
          >
            LN+
          </a>
          <button
            class="header__hamburguer"
          >
            ☰
          </button>
          <nav
            class="header__nav"
          />
        </div>
      </header>
    </div>
  </mock-static>
</div>
`;
